--- a/JiaoBaoYun-hb/html/homework/doHomework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/doHomework-stu.html
@@ -17,7 +17,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 id="title" class="mui-title">作业详情</h1>
-			<a id="publish" class="mui-pull-right ">完成</a>
+			<a id="publish" class="mui-icon mui-pull-right" style="padding-left: 30px;padding-top: 15px;font-size: 16px;">完成</a>
 		</header>
 		<div class="mui-content">
 			<div class="input-content">
