--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -135,6 +135,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<h1 class="mui-title">登录</h1>
+			<h1 class="mui-icon mui-icon-left-nav mui-pull-left" id="cancelBtn" style="text-align: right;right: 10px;font-size: 15px;">取消</h1>
 		</header>
 		<div class="mui-content">
 			<div align="center">
