--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -32,7 +32,7 @@
 			<div id="title_left"></div>
 			<h1 id="title" class="mui-title"></h1>
 			<div id="random_icon">
-				<a id="add" class="mui-icon iconfont icon-jiahao mui-pull-right mui-icon-plusempty" style="font-size: 15px;margin-top: 5px;margin-right: -5px;"></a>
+				<a id="add" class="mui-icon iconfont icon-jiahao mui-pull-right" style="font-size: 15px;margin-top: 5px;margin-right: -5px;"></a>
 				<h1 id="title" class="mui-title">云盘</h1>
 			</div>
 
