游客身份登录

--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -455,7 +455,7 @@ none; margin-top: -15px;">登录</button>
 				events.addTap('cancelBtn', function() {
 					document.activeElement.blur();
 					console.log('点击取消按钮');
-					
+					mui.back();
 				});
 
 				function loginBtn(loginInfo) {
