科教 展现 求知添加游客身份

--- a/JiaoBaoYun-hb/html/qiuzhi/experts_main.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/experts_main.html
@@ -279,6 +279,8 @@
 
 			//点击提问
 			mui('#sliderGroup').on('tap', '.expert-ask', function() {
+				//判断是否是游客身份登录
+				events.judgeLoginMode();
 				var element = this.parentNode.parentNode;
 				//专家的信息
 				var expert = JSON.parse(element.getAttribute('data-info'));
