--- a/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
@@ -179,6 +179,8 @@
 			events.addTap('UserNote', function() {
 				var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //当前登录账号utid
 				if(ExpertsInfo.UserId == personalUTID) {
+					//判断是否是游客身份登录
+					events.judgeLoginMode();
 					events.openNewWindowWithData('modifyExpertNote.html', ExpertsInfo.UserNote);
 				}
 
@@ -221,6 +223,8 @@
 				console.log('关注他的人');
 			})
 			events.addTap('focusBtn', function() {
+				//判断是否是游客身份登录
+				events.judgeLoginMode();
 				console.log('点击关注');
 				if(this.innerText == '关注') {
 					setUserFocus(ExpertsInfo.UserId, 1);
