求知数据更改

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
@@ -39,9 +39,9 @@
 				if(temp0 > 0) {
 					data.channelInfo.TabId = temp0;
 				}
-				var questionInfo=data.questionInfo;
+				var questionInfo=data.channelInfo;
 				console.log("获取的questionInfo:"+JSON.stringify(questionInfo));
-				if(questionInfo.RspData.AskMan==myStorage.getItem(storageKeyName.PERSONALINFO).utid&&questionInfo.RspData.AnswerNum==0){
+				if(questionInfo.AskMan==myStorage.getItem(storageKeyName.PERSONALINFO).utid&&questionInfo.AnswerNum==0){
 					document.getElementById("manage-question").style.display="inline-block";
 //				}else if(quetionInfo.RspData.AnswerId&&quetionInfo.RspData.IsAnswerOff){
 					
