修改游客身份登录

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSearch.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSearch.html
@@ -114,7 +114,7 @@
 					//跳转界面
 					events.openNewWindowWithData('qiuzhi-question.html', {
 						askID: modelTemp.TabId, //问题id
-						channelInfo: modelTemp, //当前话题
+						channelInfo: modelTemp, //当前话题，问题信息
 						allChannels: window.myStorage.getItem('allChannels') //全部话题
 					});
 				});
