--- a/JiaoBaoYun-hb/html/quan/leaveNew.html
+++ b/JiaoBaoYun-hb/html/quan/leaveNew.html
@@ -167,7 +167,7 @@
 				userId = plus.webview.currentWebview().data;
 				events.addTap('pubLeave', function() {
 					//判断是否是游客身份登录
-					events.judgeLoginMode();
+					if (events.judgeLoginMode()) {return;}
 					console.log(JSON.stringify(userId))
 					events.openNewWindowWithData('../quan/pub-leave.html', userId);
 				})
@@ -419,7 +419,7 @@
 			//点击回复
 			mui('.mui-table-view').on('tap', '.ableSelectedCell', function() {
 				//判断是否是游客身份登录
-				events.judgeLoginMode();
+				if (events.judgeLoginMode()) {return;}
 				cellIndex = this.id.replace('reply', '');
 
 				if(leaveArray[cellIndex].UserId == personalUTID) {
