--- a/JiaoBaoYun-hb/html/quan/zone_main.html
+++ b/JiaoBaoYun-hb/html/quan/zone_main.html
@@ -72,7 +72,7 @@
 			})
 			events.addTap('pub-dynamic', function() {
 				//判断是否是游客身份登录
-				events.judgeLoginMode();
+				if (events.judgeLoginMode()) {return;}
 				var pubDynamic = document.getElementById("pub-dynamic")
 				events.openNewWindowWithData('../quan/pub-dynamic.html', 'jxq');
 			})
