登录成功后，传值修改

--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -311,7 +311,7 @@
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
 										//										mui.toast('修改密码成功');
 										events.infoChanged();
-										events.openNewWindowWithData('../index/index.html', '');
+										mui.fire(plus.webview.getLaunchWebview(), 'login');
 									} else if(tempFlag == 1) { //在设置里，修改密码
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 										tempInfo.ispw = '1';
@@ -342,7 +342,8 @@
 				events.addTap('cancelBtn', function() {
 					document.activeElement.blur();
 					console.log('点击取消按钮');
-					events.openNewWindowWithData('../index/index.html', '');
+//					events.openNewWindowWithData('../index/index.html', 'login');
+					mui.fire(plus.webview.getLaunchWebview(), 'login');
 				});
 			});
 			//将界面的数据显示清除
