--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -528,7 +528,8 @@ none; margin-top: -15px;">登录</button>
 									//存储自动登录
 									//									loginInfo.auto = 1;
 									//									window.myStorage.setItem(window.storageKeyName.AUTOLOGIN, loginInfo);
-									events.openNewWindow('../index/index.html', '');
+//									events.openNewWindow('../index/index.html', 'login');
+									mui.fire(plus.webview.getLaunchWebview(), 'login');
 								}
 							});
 						} else {
