--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -435,18 +435,18 @@ none; margin-top: -15px;">登录</button>
 					}, false);
 					//
 					var backButtonPress = 0;
-					$.back = function(event) {
-						backButtonPress++;
-						if(backButtonPress > 1) {
-							plus.runtime.quit();
-						} else {
-							plus.nativeUI.toast('再按一次退出应用');
-						}
-						setTimeout(function() {
-							backButtonPress = 0;
-						}, 1000);
-						return false;
-					};
+//					$.back = function(event) {
+//						backButtonPress++;
+//						if(backButtonPress > 1) {
+//							plus.runtime.quit();
+//						} else {
+//							plus.nativeUI.toast('再按一次退出应用');
+//						}
+//						setTimeout(function() {
+//							backButtonPress = 0;
+//						}, 1000);
+//						return false;
+//					};
 				});
 				
 				//取消按钮
@@ -530,6 +530,7 @@ none; margin-top: -15px;">登录</button>
 									//									window.myStorage.setItem(window.storageKeyName.AUTOLOGIN, loginInfo);
 //									events.openNewWindow('../index/index.html', 'login');
 									mui.fire(plus.webview.getLaunchWebview(), 'login');
+									plus.webview.getLaunchWebview().show();
 								}
 							});
 						} else {
