--- a/JiaoBaoYun-hb/html/cloud/app_statistics.html
+++ b/JiaoBaoYun-hb/html/cloud/app_statistics.html
@@ -77,10 +77,9 @@
 			.mui-table-view-cell:after {
 				height: 0px;
 			}
-
-			.table-th {
+			/*.table-th {
 				visibility: hidden;
-			}
+			}*/
 
 			.line-defalut {
 				width: 100%;
@@ -143,15 +142,17 @@
 		<script type="text/javascript">
 			var main; //当前webview
 			var monthsArray = []; //记录最近12个月的月份
+			var studentIds; //记录当前所有的资料id
 			initMonths(); //初始化需要显示的最近12个月
 			mui.init();
 
 			mui.plusReady(function() {
 				initData();
 				showMonths();
+				initListener();
 				//获取数据
 				var month = monthsArray[monthsArray.length - 1];
-				requestData(month.beginDate, month.id);
+				requestData(month.id);
 			});
 
 			/**
@@ -167,24 +168,22 @@
 				for(var i = 1; i < 13; i++) {
 					var i_year;
 					var i_month = i;
-					var i_days;
+					//var i_days;
 					if(i < 10) {
 						i_month = '0' + i;
 					}
 					if(i <= month) {
 						i_year = year;
-						i_days = getDays(i_year, i_month);
+						//i_days = getDays(i_year, i_month);
 						monthsArray.push({
-							id: i_year.toString() + i_month.toString() + i_days.toString(),
-							beginDate: i_year.toString() + i_month.toString() + '01',
+							id: i_year + '' + i_month,
 							name: i + '月'
 						});
 					} else {
 						i_year = year - 1;
-						i_days = getDays(i_year, i_month);
+						//i_days = getDays(i_year, i_month);
 						monthsArray.splice((i - month - 1), 0, {
-							id: i_year.toString() + i_month.toString() + i_days.toString(),
-							beginDate: i_year.toString() + i_month.toString() + '01',
+							id: i_year.toString() + '' + i_month.toString(),
 							name: i + '月'
 						});
 					}
@@ -194,28 +193,28 @@
 				//				}
 			}
 
-			/**
-			 * 获取某年某月的天数
-			 * @param {Object} year 年
-			 * @param {Object} month 月
-			 */
-			function getDays(year, month) {
-				var days;
-				if(month == 2) {
-					if(year % 4 == 0 && year % 100 != 0 || year % 400 == 0) {
-						days = 29;
-					} else {
-						days = 28;
-					}
-				} else if(month == 1 || month == 3 || month == 5 || month == 7 || month == 8 || month == 10 || month == 12) {
-					//月份为：1,3,5,7,8,10,12 时，为大月.则天数为31；
-					days = 31;
-				} else {
-					//其他月份，天数为：30.
-					days = 30;
-				}
-				return days;
-			}
+			//			/**
+			//			 * 获取某年某月的天数
+			//			 * @param {Object} year 年
+			//			 * @param {Object} month 月
+			//			 */
+			//			function getDays(year, month) {
+			//				var days;
+			//				if(month == 2) {
+			//					if(year % 4 == 0 && year % 100 != 0 || year % 400 == 0) {
+			//						days = 29;
+			//					} else {
+			//						days = 28;
+			//					}
+			//				} else if(month == 1 || month == 3 || month == 5 || month == 7 || month == 8 || month == 10 || month == 12) {
+			//					//月份为：1,3,5,7,8,10,12 时，为大月.则天数为31；
+			//					days = 31;
+			//				} else {
+			//					//其他月份，天数为：30.
+			//					days = 30;
+			//				}
+			//				return days;
+			//			}
 
 			/**
 			 * 顶部显示月份和初始化滑动控件界面
@@ -250,7 +249,6 @@
 					//顶部月份
 					elementTop.id = monthsArray[i].id;
 					elementTop.href = '#' + monthsArray[i].id + '_bottom';
-					elementTop.value = monthsArray[i].beginDate;
 					elementTop.innerText = monthsArray[i].name;
 					fragmentTop.appendChild(elementTop);
 					//底部区域
@@ -266,14 +264,11 @@
 								</tr>\
 							</table>\
 						</ul>\
-						<div id="1_bottom_wrapper" class="mui-scroll-wrapper">\
-							<div id="1_bottom_scroll" class="mui-scroll">\
-								<ul id="1_bottom_ul" class="mui-table-view">\
+						<div class="mui-scroll-wrapper">\
+							<div class="mui-scroll">\
+								<ul class="mui-table-view">\
 									<li>\
-										<table border="1px" cellpadding="5px" class="table-td">\
-											<tr>\
-												<td class="mui-ellipsis">' + monthsArray[i].id + '</td>\
-											</tr>\
+										<table id="table_' + monthsArray[i].id + '" border="1px" cellpadding="5px" class="table-td">\
 										</table>\
 									</li>\
 								</ul>\
@@ -292,6 +287,24 @@
 			function initData() {
 				main = plus.webview.currentWebview(); //获取当前窗体对象
 				console.log(main.id + ' ' + JSON.stringify(main.data));
+				studentIds = arrayToStr(main.data.dataIdArray);
+			}
+
+			/**
+			 * 初始化监听
+			 */
+			function initListener() {
+				//滑动底部列表
+				document.getElementById("slider").addEventListener('slide', function() {
+					console.log('slide ' + event.detail.slideNumber);
+					var month = monthsArray[event.detail.slideNumber];
+					var element=document.getElementById(month.id);
+					var value = element.getAttribute('data-get');
+					console.log(JSON.stringify(month) + ' ' + value);
+					if(!value) {
+						requestData(month.id);
+					}
+				});
 			}
 
 			/**
@@ -304,7 +317,6 @@
 				var ele = document.getElementById(monthsArray[monthsArray.length - 1].id);
 				var y = ele.offsetLeft + ele.offsetWidth + 3 - localStorage.getItem('resolutionWidth');
 				mui('.mui-segmented-control.mui-scroll-wrapper').scroll().scrollTo(-y, 0, 0);
-
 				var deceleration = mui.os.ios ? 0.003 : 0.0009;
 				mui(".mui-slider-group .mui-scroll-wrapper").scroll({
 					scrollY: true, //是否竖向滚动
@@ -318,24 +330,57 @@
 			/**
 			 * 请求数据
 			 */
-			function requestData(beginDate, endDate) {
-				//84.（点到记事）获取某班级的点到情况统计
+			function requestData(qryMonth) {
+				//93 获取班级统计月份的点到记事统计
 				var comData = {
 					classId: main.data.gid, //班级ID
-					beginDate: beginDate, //起始日期,例如20170101
-					endDate: endDate, //终止日期,例如20170131
-					publisherId: '0' //发布者ID,0代表全部
+					studentIds: studentIds, //学生ID
+					qryMonth: qryMonth //查询月份
 				};
 				var wd = events.showWaiting();
-				postDataPro_getCheckStatisticForClass(comData, wd, function(data) {
-					console.log('84.getCheckStatisticForClass:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+				postDataPro_getMonthStatisticForMonth(comData, wd, function(data) {
+					console.log('93 getMonthStatisticForMonth ' + JSON.stringify(data));
+					document.getElementById(qryMonth).setAttribute('data-get', true); //已经发送了请求这个月的统计
 					if(data.RspCode == 0) {
-
+						if(data.RspData.Data.length != 0) {
+							showData(qryMonth, data.RspData.Data);
+						} else {
+							mui.toast('统计数据为空');
+						}
 					} else {
 						mui.toast(data.RspTxt);
 					}
 					wd.close();
 				});
+			}
+
+			/**
+			 * 显示数据
+			 */
+			function showData(month, data) {
+				console.log('showData ' + month);
+				for(var i = 0; i < data.length; i++) {
+					//console.log(JSON.stringify(data[i]));
+					var id = month + '_' + data[i].StudentId;
+					var element = document.createElement('tr');
+					//1 正常2 旷课3 迟到4 早退5请假6 其他
+					element.innerHTML = '<td id="name_' + id + '" class="mui-ellipsis"></td>\
+					<td id="2_' + id + '" class="mui-ellipsis">0</td>\
+					<td id="5_' + id + '" class="mui-ellipsis">0</td>\
+					<td id="3_' + id + '" class="mui-ellipsis">0</td>\
+					<td id="4_' + id + '" class="mui-ellipsis">0</td>';
+
+					document.getElementById("table_" + month).appendChild(element);
+					document.getElementById("name_" + id).innerText = main.data.qunDataInfos[data[i].StudentId].stuname;
+					for(var j = 0; j < data[i].Notes.length; j++) {
+						if(data[i].Notes[j].CheckNum) {
+							var td = document.getElementById(data[i].Notes[j].CheckType + '_' + id);
+							td.className = 'mui-ellipsis mui-table-view-cell not-zero';
+							td.innerText = data[i].Notes[j].CheckNum;
+						}
+					}
+				}
+				events.closeWaiting();
 			}
 		</script>
 	</body>
