设置里退出登录，修改

--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -328,7 +328,8 @@
 										//退出登录
 										events.logOff();
 										//跳转到登录界面
-										events.openNewWindowWithData('../../html/register/login.html', '');
+//										events.openNewWindowWithData('../../html/register/login.html', '');
+										mui.fire(plus.webview.getLaunchWebview(), 'quit');
 									}
 								}
 							});
