调整获取硬件参数的方法位置

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -14,12 +14,12 @@
 			.mui-bar-tab .mui-tab-item.mui-active {
 				color: #00a5e01;
 			}
-			
+
 			.mui-slider {
 				position: absolute;
 				left: 0px;
 			}
-			
+
 			.mui-slider-indicator .mui-indicator {
 				margin: 0px 2px;
 			}
@@ -64,5 +64,6 @@
 	<script type="text/javascript" src="../../js/publicHomeworkProtocol.js"></script>
 	<script type="text/javascript" src="../../js/index.js"></script>
 	<script src="../../js/main/slide_navigation.js"></script>
+	<script type="text/javascript" src="../../js/utils/Statusbar.js"></script>
 
 </html>
