--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -312,6 +312,7 @@
 										//										mui.toast('修改密码成功');
 										events.infoChanged();
 										mui.fire(plus.webview.getLaunchWebview(), 'login');
+										plus.webview.getLaunchWebview().show();
 									} else if(tempFlag == 1) { //在设置里，修改密码
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 										tempInfo.ispw = '1';
@@ -330,6 +331,7 @@
 										//跳转到登录界面
 //										events.openNewWindowWithData('../../html/register/login.html', '');
 										mui.fire(plus.webview.getLaunchWebview(), 'quit');
+										plus.webview.getLaunchWebview().show();
 									}
 								}
 							});
@@ -345,6 +347,7 @@
 					console.log('点击取消按钮');
 //					events.openNewWindowWithData('../index/index.html', 'login');
 					mui.fire(plus.webview.getLaunchWebview(), 'login');
+					plus.webview.getLaunchWebview().show();
 				});
 			});
 			//将界面的数据显示清除
