--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -167,6 +167,8 @@
 											window.myStorage.setItem(window.storageKeyName.PERSONALINFO, null);
 											//退出登录
 											events.logOff();
+											events.infoChanged();
+											
 											//											plus.runtime.quit();
 											//跳转到登录界面
 //											events.openNewWindowWithData('../../html/register/login.html', '');
