--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -310,6 +310,7 @@
 										tempInfo.isLogin = 1;
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
 										//										mui.toast('修改密码成功');
+										events.logOff();
 										events.infoChanged();
 										mui.fire(plus.webview.getLaunchWebview(), 'login');
 										plus.webview.getLaunchWebview().show();
@@ -328,6 +329,7 @@
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, null);
 										//退出登录
 										events.logOff();
+										events.infoChanged();
 										//跳转到登录界面
 //										events.openNewWindowWithData('../../html/register/login.html', '');
 										mui.fire(plus.webview.getLaunchWebview(), 'quit');
