--- a/JiaoBaoYun-hb/html/show/show_home_1.html
+++ b/JiaoBaoYun-hb/html/show/show_home_1.html
@@ -490,6 +490,14 @@
 								aname: uarea.aname,
 								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
 							});
+							//加入关注的人数据
+							eduArray.push({
+								acode: 1,
+								aname: '我关注的人',
+								aflag: 1, //0为根据省市编码获取数据，1为获取关注的人的列表
+								index: 1, //请求第几页数据
+								isRefresh: 0 //是刷新0，还是加载更多1
+							});
 						}
 					} else {
 						console.log('无定制城市')
@@ -503,6 +511,7 @@
 							aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
 						});
 						var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+						console.log('person==='+JSON.stringify(personal));
 						if(personal && personal.utid != 0) { //有账号，正常登录
 							//加入手机号所在城市
 							eduArray.push({
